				- Adding the comma after PINI where missing in carrier.substituitions
				- Moving AppType, SelBpm, ThreshTmit, CalibEnable from RegisterIn to 
					RegisterOut template and adding them to RegisterOutRBV as well.
				- Changed macros for dbLoadRecords of swap.db
				- Changed SCAN to 1sec from PASSIVE for BPMS Ip and Port PV in carrier.substituitions

R2.2.8		Carolina Bianchini (carolina)			- 10/10/2018
				- clean up all st.cmd 

R2.2.7		Carolina Bianchini (carolina)
				-updating tprTrigger module to R1.2.4
				-removing HIHI LOLO from RegisterIn.template when not in autosave or alarmed.
				-bcmApp/Db/registerIn.template changing the ADDR to 1 from 0 for line:
				 field(INP,  "@asyn($(PORT),1)$(PARAM)")
				-Adding a new databaase to handle message status readback over the back pane, msgStatus.db
				-Adding to st.cmd line: dbLoadRecords("db/msgStatus.db","carrier_prefix=${AMC0_PREFIX}")

R2.2.6		Carolina Bianchini (carolina)			- 8/14/2018
				-adding macro PORT for tprTrig.db

R2.2.5		Dan Sciortino					- 8/14/2018
				- Fixed RegisterIn.template generation
				- Added makefile target IOCRELEASE
				- Fixed formatting in substitutions file

R2.2.4		Carolina Bianchini (carolina) 			- 8/13/2018
				-Updating the dictionary file for TimingProc 
				 to include only the following timing related signals: 
				 SelectSource, SoftTrig, outPolarity, trigDelay, trigStretch. 
				-Adding tpr Trigger driver setup to startup script.
				-Adding tprTrigger dbd and LIB
				-Updating tprTrigger release to R1.2.2
				
R2.2.3		Dan Sciortino					- 8/09/2018
				- Restore missing MPS module
				
R2.2.2		Dan Sciortino					- 8/09/2018
				- Fixed typo in dbLoadRecords tprTrg.db -> tprTrig.db
				- Fixed Db/Makefile for correct tprTrig.db

R2.2.1		Dan Sciortino					- 8/09/2018
				- Fixed typo in dbLoadRecords tprTrig.db -> tprTrg.db

R2.2.0		Dan Sciortino					- 8/09/2018
				- Updated tprTriggers 1.2.0 -> 1.2.1
				- CrossbarControl  1.0.3 -> 1.05