@@ -29,6 +29,27 @@ DB_INSTALLS += $(YCPSWASYN)/db/bo.template
 DB_INSTALLS += $(YCPSWASYN)/db/waveform_stream16.template
 DB_INSTALLS += $(YCPSWASYN)/db/waveform_stream32.template
 
+## For manually created record
+DB_INSTALLS += $(YCPSWASYN)/db/RegisterIn.template
+DB_INSTALLS += $(YCPSWASYN)/db/RegisterOut.template
+DB_INSTALLS += $(YCPSWASYN)/db/RegisterOutRBV.template
+DB_INSTALLS += $(YCPSWASYN)/db/RegisterArrayChar.template
+DB_INSTALLS += $(YCPSWASYN)/db/RegisterArrayIn.template
+DB_INSTALLS += $(YCPSWASYN)/db/RegisterArrayOut.template
+DB_INSTALLS += $(YCPSWASYN)/db/RegisterEnumBIn.template
+DB_INSTALLS += $(YCPSWASYN)/db/RegisterEnumMBBIn.template
+DB_INSTALLS += $(YCPSWASYN)/db/RegisterEnumBOut.template
+DB_INSTALLS += $(YCPSWASYN)/db/RegisterEnumBOutRBV.template
+DB_INSTALLS += $(YCPSWASYN)/db/RegisterEnumMBBOut.template
+DB_INSTALLS += $(YCPSWASYN)/db/RegisterEnumMBBOutRBV.template
+DB_INSTALLS += $(YCPSWASYN)/db/RegisterDoubleIn.template
+DB_INSTALLS += $(YCPSWASYN)/db/RegisterDoubleOut.template
+DB_INSTALLS += $(YCPSWASYN)/db/RegisterDoubleOutRBV.template
+DB_INSTALLS += $(YCPSWASYN)/db/RegisterCommand.template
+DB_INSTALLS += $(YCPSWASYN)/db/RegisterStream.template
+DB_INSTALLS += $(YCPSWASYN)/db/RegisterStream16.template
+DB_INSTALLS += $(YCPSWASYN)/db/example.substitutions
+
 # Keithley
 DB_INSTALLS += $(KEITHLEY6482)/db/asynRecord.db
 DB_INSTALLS += $(KEITHLEY6482)/db/devKeithley6482.db
@@ -109,27 +130,6 @@ DB += saveLoadConfig.db
 
 # For automatic initialization (requires saveLoadConfig.db)
 DB += monitorFPGAReboot.db
-
-# For manually created record
-DB += RegisterIn.template
-DB += RegisterOut.template
-DB += RegisterOutRBV.template
-DB += RegisterArrayChar.template
-DB += RegisterArrayIn.template
-DB += RegisterArrayOut.template
-DB += RegisterEnumBIn.template
-DB += RegisterEnumMBBIn.template
-DB += RegisterEnumBOut.template
-DB += RegisterEnumBOutRBV.template
-DB += RegisterEnumMBBOut.template
-DB += RegisterEnumMBBOutRBV.template
-DB += RegisterDoubleIn.template
-DB += RegisterDoubleOut.template
-DB += RegisterDoubleOutRBV.template
-DB += RegisterCommand.template
-DB += RegisterStream.template
-DB += RegisterStream16.template
-DB += RegisterDoubleInLimits.template
 
 # Install Common databases needed by All IOCs
 # ========================================================
